--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
 .order p{
     margin-bottom: 0.2rem!important;
 }
+/* rating page  */
 .mobile-view{
     display: none;
     visibility: hidden;
@@ -19,6 +20,83 @@
     color: #ccc;
 }
 
+/* checkout  */
+/* address  */
+.wrap{
+    background-color: #1a1a1ae6;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    padding-top: 70px;
+    display: none;
+}
+/* close button */
+.wrap > span{
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    font-size: 50px;
+    line-height: 40px;
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+.forms .form-ele{
+    border: 1px solid;
+    background-color: #fff;
+    padding: 30px;
+}
+
+.wrap > span:hover{
+    color: rgba(255, 255, 255, 0.6);
+}
+.forms .form-control:focus {
+    color: #6e707e;
+    background-color: #fff;
+    border-color: #bac8f3;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(78,115,223,.25);
+}
+
+/* relative de cac con absolute theo  */
+.slideshow{
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+
+    /* custom the height of thumbnail  */
+    max-height: 600px;
+    max-width: 700px;
+    margin: auto;
+}
+
+/* relative de dich chuyen cac anh (neu khong co thi left k an)  */
+.forms{
+    width: 300%;
+    display: flex;
+    position: relative;
+    top: 0;
+    left: 0;
+    
+}
+.forms form{
+    display: block;
+    width: calc(100% / 3);
+    object-fit: cover;
+
+    /* very important to custom height of thumbnail  */
+    height: 100%;
+  
+
+}
+/* review page  */
 @media screen and (max-width: 768px) {
     .price{
         width: 0;
