--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,6 +135,11 @@
     }
 }
 
+/* user dashboard  */
+.sidebar .sidebar-brand .sidebar-brand-text {
+    display: inline;
+}
+
 
 @media screen and (max-width: 576px){
     /* product detatil  */
